samples/_failures_safe/1761352268_af653f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_675b5469.c: In function ‘main’:
./samples/SAFE/__tmp_675b5469.c:148:13: error: expected expression at end of input
  148 |             for (int j = 0; j <
      |             ^~~
./samples/SAFE/__tmp_675b5469.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_675b5469.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_675b5469.c:148:13: error: expected declaration or statement at end of input
